add: google oauth part and some admin page functions and ticket page functions in frontend

--- a/env.example
+++ b/env.example
@@ -13,6 +13,8 @@ FRONTEND_URL=http://localhost:8081
 # For MongoDB Atlas (cloud), use format:
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/gto-poker-app
 
+GOOGLE_CLIENT_SECRET=
+
 # Authentication Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=7d
