add: revenue management functions in admin page since

--- a/env.example
+++ b/env.example
@@ -54,4 +54,13 @@ SESSION_SECRET=your-session-secret-key
 # Image Processing Configuration
 SHARP_QUALITY=80
 IMAGE_RESIZE_MAX_WIDTH=1920
-IMAGE_RESIZE_MAX_HEIGHT=1080 
+IMAGE_RESIZE_MAX_HEIGHT=1080
+
+# Stripe Payment Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+STRIPE_CURRENCY=usd
+
+# Payment Plans Configuration
+QUOTA_PACKAGES=20:10,55:25,120:50
