--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^5.12.2",
     "sharp": "^0.32.6",
+    "stripe": "^19.1.0",
     "tesseract.js": "^6.0.1",
     "uuid": "^9.0.1"
   },
