add: some functiosn so that crypto payment

--- a/env.example
+++ b/env.example
@@ -64,3 +64,7 @@ STRIPE_CURRENCY=usd
 
 # Payment Plans Configuration
 QUOTA_PACKAGES=20:10,55:25,120:50
+
+# Crypto
+BEP20_WALLET_ADDRESS=0xYourBEP20Address
+SOL_WALLET_ADDRESS=YourSOLAddress
