add: payment part using bep20 and sol

--- a/env.example
+++ b/env.example
@@ -65,6 +65,14 @@ STRIPE_CURRENCY=usd
 # Payment Plans Configuration
 QUOTA_PACKAGES=20:10,55:25,120:50
 
-# Crypto
+# Crypto Payment Configuration
 BEP20_WALLET_ADDRESS=0xYourBEP20Address
 SOL_WALLET_ADDRESS=YourSOLAddress
+
+# Blockchain RPC Endpoints (optional - defaults to public endpoints)
+# BSC_RPC_URL=bsc_rpc_url
+# SOLANA_RPC_URL=solana_rpc_url
+
+# Coingecko REDIS_URL
+# SOLANA_COINGECKO_API=solana_coingecko_api
+# BSC_COINGECKO_API=bsc_coingecko_api
