--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/vision": "^5.3.3",
+    "@solana/web3.js": "^1.98.4",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethers": "^6.15.0",
     "expo-server-sdk": "^4.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
